# HW13

./: .env  Dockerfile  Pipfile  config.py  main.py  pyproject.toml  requirements.txt  schemas.py
auth/: utils.py
database/: models.py
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  users.py
services/: cloudinary_service.py  email.py
services/templates/: email_template.html
